[package]
name = "solana-escrow"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[dependencies]
solana-program = "1.6.17"
thiserror = "1.0.24"
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
arrayref = "0.3.6"

[dev-dependencies]
assert_matches = "1.4.0"
solana-sdk = "1.7.4"
solana-validator = "1.7.4"

[lib]
crate-type = ["cdylib", "lib"]
