[package]
name = "solana-escrow"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[dependencies]
solana-program = "1.7.4"
thiserror = "1.0.24"
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
arrayref = "0.3.6"

[features]
test-bpf = []

[dev-dependencies]
assert_matches = "1.4.0"
solana-sdk = "1.7.4"
solana-validator = "1.7.4"
solana-program-test = "1.7.4"
solana-client = "1.7.4"
solana-account-decoder = "1.7.4"

[lib]
name = "spl_escrow"
crate-type = ["cdylib", "lib"]
